--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -145,7 +145,7 @@ main .home-multimedia {
   margin-top: 72px;
 }
 
-.page-detail .detail-article .detail-article-author{
+.page-detail .detail-article .detail-article-author {
   flex: 1;
 }
 
@@ -168,9 +168,9 @@ p.time > span.time-day {
   position: relative;
 }
 main .page__home .page__home-content .left .left__header a img {
-  height: auto;
+  /* height: auto; */
   box-shadow: 5px 5px 5px #444444;
-  width: 99%;
+  width: 100%;
 }
 .left__header > a > img {
   position: absolute;
@@ -319,8 +319,8 @@ main .page__home .page__home-header h1 {
   font-size: 15px;
 }
 main .page__home .page__home-content .left .left__header > a {
-  overflow: hidden;
-  height: 100%;
+  /* overflow: hidden; */
+  height: 97%;
 }
 .detail-involve__content > .involve-content > .involve-content__img > a {
   width: 100%;
@@ -329,6 +329,8 @@ main .page__home .page__home-content .left .left__header > a {
 .detail-involve__content > .involve-content > .involve-content__img > a > img {
   width: 100%;
   height: 100%;
+  box-shadow: 5px 5px 5px #444444;
+  border-radius: 20px;
 }
 .detail-care
   > .detail-care__left
@@ -542,7 +544,7 @@ main .page__home {
   width: 100%;
 }
 .page-logform .topic-news .list-news .list-news__itme > a {
-  /* height: 210px; */
+  height: 210px;
   overflow: hidden;
 }
 .page-logform .topic-news .list-news .list-news__itme > a > img {
@@ -562,6 +564,7 @@ main .page__home {
 }
 .page-logform .topic-section__content .section-content {
   border-right: 0px solid #ededed;
+  box-shadow: 0px 5px 20px #444444;
 }
 .page-detaillogform .detaillogform-img {
   overflow: hidden;
@@ -1997,7 +2000,7 @@ main .page__home .page__home-listnew .right__right {
   align-items: center;
   margin-right: 20px;
 }
-  
+
 .name-user {
   font-weight: 500;
   font-size: 17px;
@@ -2028,4 +2031,22 @@ main .page__home .page__home-listnew .right__right {
   color: #fff;
   border: 1px solid;
   border-radius: 5px;
+}
+
+.left-quangcao {
+  height: 360px;
+}
+
+.new__title > h2 {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  font-weight: 900;
+  font-size: 20px;
+  background-color: #d3d3d3;
+}
+
+.new__title > h2 > img {
+  display: inline-block;
+  margin: 0;
 }
